# mnmm_travail

./: .gitignore  Ball.cpp  Ball.h  BallPrinter.cpp  BallPrinter.h  Barrel.cpp  Barrel.h  BarrelPrinter.cpp  BarrelPrinter.h  CMakeLists.txt  CMakeSettings.json  Cell.cpp  Cell.h  CohesionSettings.cpp  CohesionSettings.h  CollisionSettings.cpp  CollisionSettings.h  Collisions.cpp  Collisions.h  Container.cpp  Container.h  Domain.cpp  Domain.h  Grain.cpp  Grain.h  GrainPrinter.cpp  GrainPrinter.h  Loader.cpp  Loader.h  Plan.cpp  Plan.h  Plane.cpp  Plane.h  PlanePrinter.cpp  PlanePrinter.h  README.md  Vector2.cpp  Vector2.h  cohesion.cpp  cohesion.h  (+11 more)
viz/: energyBarrel.py  energyGraph.py  visualizeData.py
